force-app/main/default/objects/RAC_Screen_Config__mdt/RAC_Screen_Config__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata is used to configure the screens for RAC flow.</description>
    <label>RAC Screen Config</label>
    <pluralLabel>RAC Screen Configs</pluralLabel>
</CustomObject>