force-app/main/default/objects/RAC_Screen_Config__mdt/fields/Based_On_Individual__c.field-meta.xml
<CustomField>
    <fullName>Based_On_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Based On Individual</label>
    <type>Checkbox</type>
</CustomField>