force-app/main/default/objects/RAC_Screen_Config__mdt/fields/disabled_RAC_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>disabled_RAC_Help_Text__c</fullName>
    <label>disabled_RAC Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>