force-app/main/default/objects/RAC_Screen_Config__mdt/fields/disabled_RAC_Menu_Selection__c.field-meta.xml
<CustomField>
    <fullName>disabled_RAC_Menu_Selection__c</fullName>
    <label>disabled_RAC Menu Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>