force-app/main/default/objects/RAC_Screen_Config__mdt/fields/Member_Filter__c.field-meta.xml
<CustomField>
    <fullName>Member_Filter__c</fullName>
    <label>Member Filter</label>
    <type>TextArea</type>
</CustomField>