force-app/main/default/objects/RAC_Screen_Config__mdt/fields/RAC_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>RAC_Help_Text__c</fullName>
    <label>RAC Help Text</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Living Arrangement changes include a difference in a previously reported Living Arrangement Type (e.g., In-Home to Incarcerated, Attending School to Rehab Facility, etc.)</fullName>
                
                    <default>true</default>
                
                    <label>Living Arrangement changes include a difference in a previously reported Living Arrangement Type (e.g., In-Home to Incarcerated, Attending School to Rehab Facility, etc.)</label>
                
                </value>
            
                <value>
                
                    <fullName>Changes to Resources include a decrease or increase in value, change in ownership or the opening or closing of accounts.</fullName>
                
                
                    <label>Changes to Resources include a decrease or increase in value, change in ownership or the opening or closing of accounts.</label>
                
                </value>
            
                <value>
                
                    <fullName>For previously reported Expenses, changes include a change in the amount of an expense or if the expense has ended.</fullName>
                
                
                    <label>For previously reported Expenses, changes include a change in the amount of an expense or if the expense has ended.</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>