force-app/main/default/objects/RAC_Screen_Config__mdt/fields/RAC_Menu_Selection__c.field-meta.xml
<CustomField>
    <fullName>RAC_Menu_Selection__c</fullName>
    <label>RAC Menu Selection</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Emergency Medical Condition and Disability</fullName>
                
                    <default>true</default>
                
                    <label>Emergency Medical Condition and Disability</label>
                
                </value>
            
                <value>
                
                    <fullName>Living Arrangement</fullName>
                
                
                    <label>Living Arrangement</label>
                
                </value>
            
                <value>
                
                    <fullName>Pregnancy</fullName>
                
                
                    <label>Pregnancy</label>
                
                </value>
            
                <value>
                
                    <fullName>Healthcare Coverage</fullName>
                
                
                    <label>Healthcare Coverage</label>
                
                </value>
            
                <value>
                
                    <fullName>Income</fullName>
                
                
                    <label>Income</label>
                
                </value>
            
                <value>
                
                    <fullName>Contact Information</fullName>
                
                
                    <label>Contact Information</label>
                
                </value>
            
                <value>
                
                    <fullName>Medicare Coverage</fullName>
                
                
                    <label>Medicare Coverage</label>
                
                </value>
            
                <value>
                
                    <fullName>Relationship and Tax filing Status</fullName>
                
                
                    <label>Relationship and Tax filing Status</label>
                
                </value>
            
                <value>
                
                    <fullName>Resources</fullName>
                
                
                    <label>Resources</label>
                
                </value>
            
                <value>
                
                    <fullName>Expense</fullName>
                
                
                    <label>Expense</label>
                
                </value>
            
                <value>
                
                    <fullName>Member Information</fullName>
                
                
                    <label>Member Information</label>
                
                </value>
            
                <value>
                
                    <fullName>Education</fullName>
                
                
                    <label>Education</label>
                
                </value>
            
				<value>
                
					<fullName>Community Integration Supplementation and Caretaker Services</fullName>
                
                
					<label>Community Integration Supplementation and Caretaker Services</label>
                
				</value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>