force-app/main/default/objects/RAC_Screen_Config__mdt/fields/RAC_Menu_Subheader__c.field-meta.xml
<CustomField>
    <fullName>RAC_Menu_Subheader__c</fullName>
    <label>RAC Menu Subheader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(such as Phone, Email, and Address)</fullName>
                <default>true</default>
                <label>(such as Phone, Email, and Address)</label>
            </value>
            <value>
                <fullName>(such as vehicle, bank account)</fullName>
            </value>
            <value>
                <fullName>(such as child support or medical)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>