force-app/main/default/objects/RAC_Screen_Config__mdt/fields/RAC_Screen_Ids__c.field-meta.xml
<CustomField>
    <fullName>RAC_Screen_Ids__c</fullName>
    <label>RAC Screen Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>