force-app/main/default/objects/RAC_Screen_Config__mdt/fields/Review_Required_Screens_for_RAC__c.field-meta.xml
<CustomField>
    <fullName>Review_Required_Screens_for_RAC__c</fullName>
    <description>This field contains screens that have to be queued up for Review in case of RAC.</description>
    <label>Review Required Screens for RAC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>